<resources>
    <string name="app_name">ObjectCollector</string>
    <string name="action_settings">Settings</string>
    <string name="action_camera">Take Picture</string>
    <string name="action_save">Save</string>

    <string name="name">Name</string>
    <string name="totalroom">Total Room</string>
    <string name="address">Address</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_maps">Map</string>


</resources>
